<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <Spinner
            android:id="@+id/dayspinenr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etStartTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="false"
                android:hint="@string/break_start"
                android:inputType="time"
                android:onClick="clickStartTime" />

            <TextView
                android:id="@+id/tvArrow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:text="@string/arrow"
                android:textAlignment="center"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/etStopTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="false"
                android:hint="@string/break_end"
                android:inputType="time"
                android:onClick="clickEndTime" />
        </LinearLayout>

        <Button
            android:id="@+id/findFreeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search" />

        <LinearLayout
            android:id="@+id/freeFriends"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/friendText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/friends_on_break"
                android:textAlignment="center"
                android:textSize="24sp"/>

            <ListView
                android:id="@+id/lvFriends"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>