<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvNone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/default_none"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/tl">

            <TableRow
                android:id="@+id/trFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvFullName"
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name" />

                <TextView
                    android:id="@+id/etFullName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:selectAllOnFocus="false"
                    android:singleLine="false"
                    android:textColor="@color/colorAccent"
                    android:text="@string/default_value" />

            </TableRow>

            <TableRow
                android:id="@+id/trEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email" />

                <TextView
                    android:id="@+id/etEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/colorAccent"
                    android:text="@string/default_value" />

            </TableRow>

            <TableRow
                android:id="@+id/trOffice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvOffice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/office" />

                <TextView
                    android:id="@+id/etOffice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/colorAccent"
                    android:text="@string/default_value" />

            </TableRow>

            <TableRow
                android:id="@+id/trLocal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvLocal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/local" />

                <TextView
                    android:id="@+id/etLocal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/colorAccent"
                    android:text="@string/default_value" />
            </TableRow>

            <TableRow
                android:id="@+id/trSectors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvSectors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sectors" />

                <TextView
                    android:id="@+id/etSectors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/colorAccent"
                    android:text="@string/default_value" />

            </TableRow>

            <TableRow
                android:id="@+id/trPositions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvPositions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/positions" />

                <TextView
                    android:id="@+id/etPositions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/colorAccent"
                    android:text="@string/default_value" />
            </TableRow>

            <TableRow
                android:id="@+id/trDepartments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvDepartments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/departments" />

                <TextView
                    android:id="@+id/etDepartments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/colorAccent"
                    android:text="@string/default_value" />
            </TableRow>

            <TableRow
                android:id="@+id/trBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvBio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bio" />

                <TextView
                    android:id="@+id/etBio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/colorAccent"
                    android:text="@string/default_value" />
            </TableRow>

            <TableRow
                android:id="@+id/trWebsite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvWebsite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/website" />

                <TextView
                    android:id="@+id/etWebsite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/colorAccent"
                    android:text="@string/default_value" />
            </TableRow>
            <TableRow
                android:id="@+id/trImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/image" />

                <TextView
                    android:id="@+id/etImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textColor="@color/colorAccent"
                    android:text="@string/default_value" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>